tests/baselines/reference/parserComputedPropertyName31.errors.txt
parserComputedPropertyName31.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName31.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName31.ts (2 errors) ====
    class C {
        // yes ASI
        [e]: number
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2]: number
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }